refactor: small style updates

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,14 +2,10 @@
 const date = new Date().getFullYear();
 ---
 
-<footer class="w-full text-center mb-4">
+<footer
+  class="w-full border-t border-neutral-200 dark:border-neutral-800 text-center p-4"
+>
   <p class="font-medium">
-    Copyright {date} Doesmycode.work
-  </p>
-  <p>
-    Powered by <a
-      class="text-blue-600 dark:text-blue-400 hover:opacity-80 underline mt-2"
-      href="https://astro.build">Astro</a
-    >
+    Copyright &copy; {date} Doesmycode.work
   </p>
 </footer>
