--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -3,11 +3,9 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
 <BaseLayout title="Not found">
-  <div
-    class="flex flex-col gap-2 p-4 items-center justify-center text-center max-w-md"
-  >
+  <div class="p-4 md:p-0 text-center max-w-md">
     <p class="text-3xl font-semibold">Not Found</p>
-    <p class="text-lg text-neutral-600 dark:text-neutral-400">
+    <p class="mt-2 text-lg text-neutral-600 dark:text-neutral-400">
       This page was not found, you might want to go <a
         href="/"
         class="text-blue-600 dark:text-blue-500 hover:opacity-80 underline"
