--- a/src/pages/500.astro
+++ b/src/pages/500.astro
@@ -3,18 +3,15 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
 <BaseLayout title="Internal Server Error">
-  <div
-    class="flex flex-col gap-2 p-4 items-center justify-center text-center max-w-md"
-  >
+  <div class="p-4 md:p-0 text-center max-w-md">
     <p class="text-3xl font-semibold">Internal Server Error</p>
-    <p class="text-lg text-neutral-600 dark:text-neutral-400">
+    <p class="mt-2 text-lg text-neutral-600 dark:text-neutral-400">
       Probably my code doesn't work, so why don't you try to <a
         href="javascript:location.reload();"
         class="text-blue-600 dark:text-blue-500 hover:opacity-80 underline"
       >
-        refresh
-      </a>
-      . You can also check the console for more details.
+        refresh</a
+      >. You can also check the console for more details.
     </p>
   </div>
 </BaseLayout>
