--- a/src/pages/posts/[...id].astro
+++ b/src/pages/posts/[...id].astro
@@ -27,17 +27,17 @@ const readTime = Math.round(words / 200);
 ---
 
 <BaseLayout title={post.data.title}>
-  <div class="flex flex-col items-start p-4">
+  <div class="p-4 md:p-8">
     <div>
       <p class="text-3xl font-semibold">{post.data.title}</p>
-      <p class="text-neutral-600 dark:text-neutral-400 mt-1">
+      <p class="text-neutral-600 dark:text-neutral-400 mt-2">
         {new Date(post.data.publishedOn).toDateString()} &bull; {readTime} min &bull;
         {post.data.author}
       </p>
     </div>
     <Toc headings={headings} />
     <article
-      class="mt-4 prose dark:prose-invert prose-neutral prose-pre:max-w-[85vw] md:prose-pre:max-w-none prose-code:break-all prose-a:break-all prose-headings:my-4 prose-p:my-0 max-w-screen-md"
+      class="mt-4 prose dark:prose-invert prose-neutral prose-code:break-all prose-a:break-all prose-headings:my-4 prose-p:my-0 max-w-screen-lg"
     >
       <Content />
     </article>
