--- a/src/pages/posts/[...page].astro
+++ b/src/pages/posts/[...page].astro
@@ -17,7 +17,7 @@ const { page }: { page: Page } = Astro.props;
 ---
 
 <BaseLayout title="Posts">
-  <div class="flex flex-col p-4 items-start min-w-full">
+  <div class="p-4 md:p-8 items-start">
     <h2 class="text-3xl font-semibold">Posts</h2>
     <p class="mt-2">I occasionally write some posts.</p>
     <div class="flex flex-col gap-2 mt-4">
