--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -45,7 +45,7 @@ const projects: Project[] = [
 ---
 
 <BaseLayout title="Projects">
-  <div class="p-4 flex flex-col items-stretch">
+  <div class="p-4 md:p-0 items-stretch">
     <h2 class="text-3xl font-semibold">Projects</h2>
     <p class="mt-2">Here are some of my favorite projects.</p>
     <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mt-4">
