--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -50,7 +50,7 @@ const { repo, description, name, language, color } = Astro.props;
 
 <astro-project data-repo={repo}>
   <div
-    class="flex flex-col justify-between border border-neutral-200 dark:border-neutral-800 rounded-md p-4 max-w-md h-full drop-shadow-sm"
+    class="flex flex-col justify-between border border-neutral-200 dark:border-neutral-800 rounded-md p-4 max-w-md h-full"
   >
     <div>
       <div>
