--- a/src/components/ScrollToTopButton.astro
+++ b/src/components/ScrollToTopButton.astro
@@ -32,7 +32,7 @@ import { Icon } from "astro-icon/components";
 </script>
 
 <button
-  class="hidden drop-shadow-sm bg-neutral-100 dark:bg-neutral-900 border border-neutral-200 dark:border-neutral-800 rounded-full transition delay-150 duration-300 ease-in-out hover:-translate-y-1 hover:scale-110 p-4 fixed bottom-4 right-4"
+  class="hidden drop-shadow-sm bg-neutral-100 dark:bg-neutral-900 border border-neutral-200 dark:border-neutral-800 rounded-full transition delay-150 duration-300 ease-in-out hover:-translate-y-1 hover:scale-110 hover:cursor-pointer p-4 fixed bottom-4 right-4"
   id="scrollToTop"
   aria-label="Scroll to top"
 >
