fix: fix overflow issue in pre

--- a/src/pages/posts/[...id].astro
+++ b/src/pages/posts/[...id].astro
@@ -41,7 +41,7 @@ const readTime = Math.round(words / 200);
     </div>
     <Toc headings={headings} />
     <article
-      class="mt-4 prose dark:prose-invert prose-neutral prose-code:break-all prose-a:break-all prose-headings:my-4 prose-p:my-0 max-w-screen-lg"
+      class="mt-4 prose dark:prose-invert prose-neutral prose-code:break-all prose-a:break-all prose-headings:my-4 prose-p:my-0 prose-pre:max-w-[85vw] md:prose-pre:max-w-none max-w-screen-lg"
     >
       <Content />
     </article>
